--- a/css/_common.scss
+++ b/css/_common.scss
@@ -54,6 +54,9 @@ html {
 .fnt_SitkaSmall{
     font-family: "Sitka Small";
 }
+.fnt_SitkaSmallB{
+    font-family: "Sitka Small";
+}
 /* Color
 ------------------------------------------------------------*/
 $light : #f7f3f3;
@@ -91,6 +94,10 @@ $gray : #d0d0d0;
 }
 .txt_clr_night{
     color: $night;
+}
+.txt_clr_gold{
+    color: $gold;
+    @include fontsize(14);
 }
 
 // 文字間隔
@@ -150,6 +157,12 @@ $gray : #d0d0d0;
 .mb_20{
     margin-bottom: 20px;
 }
+.mb_40{
+    margin-bottom: 40px;
+}
+.mb_50{
+    margin-bottom: 50px;
+}
 
 
 // Padding-Style
@@ -164,6 +177,9 @@ $gray : #d0d0d0;
 }
 .pt_30{
     padding-top: 30px;
+}
+.pt_40{
+    padding-top: 40px;
 }
 .pt_50{
     padding-top: 50px;
@@ -191,6 +207,12 @@ $gray : #d0d0d0;
 }
 .pb_15{
     padding-bottom: 15px;
+}
+.pb_20{
+    padding-bottom: 20px;
+}
+.pb_40{
+    padding-bottom: 40px;
 }
 .pd_5{
     padding: 5px;
